# CMakeList.txt: CMake-Projekt für "Graham Scan". Schließen Sie die Quelle ein, und definieren Sie
# projektspezifische Logik hier.
#
cmake_minimum_required (VERSION 3.8)

# Fügen Sie der ausführbaren Datei für dieses Projekt eine Quelle hinzu.
add_executable (GrahamScan "Graham_Scan.cpp")

# TODO: Fügen Sie bei Bedarf Tests und Installationsziele hinzu.
